--- a/package.json
+++ b/package.json
@@ -4,11 +4,9 @@
   "description": "A starter for building node-based projects and ies:",
   "main": "index.js",
   "scripts": {
-    "clean": "./node_modules/.bin/trash build",
-    "build": "./node_modules/.bin/trash build && ",
-    "watch": "./node_modules/.bin/trash build && ",
-    "lint": "./node_modules/.bin/eslint",
-    "start": "node build/index.js",
+    "clean": "./node_modules/.bin/trash ./dist",
+    "build": "./node_modules/babel ./src --out-dir ./dist",
+    "start": "node ./dist/index.js",
     "test": "./node_modules/.bin/jest --forceExit",
     "cover": "./node_modules/.bin/jest --coverage --coverageDirectory=coverage"
   },
@@ -23,12 +21,13 @@
   "devDependencies": {
     "@types/jest": "^22.1.1",
     "@types/node": "^9.4.0",
+    "babel-cli": "^6.26.0",
+    "babel-plugin-macros": "^2.1.0",
+    "babel-preset-env": "^1.6.1",
+    "eslint": "^4.16.0",
     "jest": "^22.1.4",
     "trash": "^4.2.1",
-    "trash-cli": "^1.4.0",
-    "ts-jest": "^22.0.2",
-    "tslint": "^5.9.1",
-    "typescript": "^2.8.0-dev.20180130"
+    "trash-cli": "^1.4.0"
   },
   "jest": {
     "coverageDirectory": "./coverage/",
