--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "clean": "./node_modules/.bin/trash ./dist",
-    "build": "./node_modules/babel ./src --out-dir ./dist",
-    "start": "node ./dist/index.js",
+    "build": "babel ./src --out-dir ./dist",
+    "start": "npm run build && node ./dist/index.js",
     "test": "./node_modules/.bin/jest --forceExit",
     "cover": "./node_modules/.bin/jest --coverage --coverageDirectory=coverage"
   },
@@ -26,6 +26,7 @@
     "babel-preset-env": "^1.6.1",
     "eslint": "^4.16.0",
     "jest": "^22.1.4",
+    "param.macro": "^2.0.0",
     "trash": "^4.2.1",
     "trash-cli": "^1.4.0"
   },
