Create better npm scripts; better babel config

--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,7 @@
 {
-  "presets": ["env"]
+  "presets": ["@babel/preset-env"],
+  "plugins": [
+    "@babel/plugin-proposal-pipeline-operator",
+    "babel-plugin-macros"
+  ]
 }
