--- a/package.json
+++ b/package.json
@@ -24,28 +24,22 @@
     "@babel/node": "^7.0.0-beta.40",
     "@babel/plugin-proposal-pipeline-operator": "^7.0.0-beta.40",
     "@babel/preset-env": "^7.0.0-beta.40",
-    "@types/jest": "^22.1.1",
-    "@types/node": "^9.4.0",
-    "babel-plugin-macros": "^2.1.0",
-    "chalk": "^2.3.0",
-    "eslint": "^4.16.0",
-    "jest": "^22.1.4",
+    "@types/jest": "^22.2.0",
+    "@types/node": "^9.4.6",
+    "babel-plugin-macros": "^2.2.0",
+    "chalk": "^2.3.2",
+    "eslint": "^4.18.2",
+    "jest": "^22.4.2",
     "param.macro": "^2.0.0",
-    "trash": "^4.2.1",
+    "trash": "^4.3.0",
     "trash-cli": "^1.4.0"
   },
   "jest": {
     "coverageDirectory": "./coverage/",
     "collectCoverage": true,
-    "transform": {
-      "^.+\\.tsx?$": "<rootDir>/node_modules/ts-jest/preprocessor.js"
-    },
-    "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js|jsx)$",
+    "testRegex": "(/__tests__/.*|\\.(test|spec))\\.js$",
     "moduleFileExtensions": [
-      "ts",
-      "tsx",
       "js",
-      "jsx",
       "json"
     ]
   },
