--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
     "watch:babel": "babel src --out-dir build --source-maps inline --watch",
     "start": "node build/index.js",
     "test": "./node_modules/.bin/jest --forceExit",
-    "cover": "./node_modules/.bin/jest --coverage --coverageDirectory=coverage"
+    "cover": "./node_modules/.bin/jest --coverage --coverageDirectory=coverage",
+    "pretty-quick": "pretty-quick --staged",
+    "precommit": "run-s pretty-quick"
   },
-  "keywords": [
-    "node"
-  ],
+  "keywords": ["node"],
   "author": "Scott Wade <sc0ttwad3@gmail.com> (http://sc0ttwad3.com)",
   "license": "MIT",
   "devDependencies": {
@@ -29,8 +29,11 @@
     "babel-plugin-macros": "^2.2.0",
     "chalk": "^2.3.2",
     "eslint": "^4.18.2",
+    "husky": "^0.14.3",
     "jest": "^22.4.2",
     "param.macro": "^2.0.0",
+    "prettier": "^1.11.1",
+    "pretty-quick": "^1.4.1",
     "trash": "^4.3.0",
     "trash-cli": "^1.4.0"
   },
@@ -38,10 +41,7 @@
     "coverageDirectory": "./coverage/",
     "collectCoverage": true,
     "testRegex": "(/__tests__/.*|\\.(test|spec))\\.js$",
-    "moduleFileExtensions": [
-      "js",
-      "json"
-    ]
+    "moduleFileExtensions": ["js", "json"]
   },
   "dependencies": {
     "npm-run-all": "^4.1.2",
