--- a/package.json
+++ b/package.json
@@ -15,25 +15,27 @@
     "pretty-quick": "pretty-quick --staged",
     "precommit": "run-s pretty-quick"
   },
-  "keywords": ["node"],
+  "keywords": [
+    "node"
+  ],
   "author": "Scott Wade <sc0ttwad3@gmail.com> (http://sc0ttwad3.com)",
   "license": "MIT",
   "devDependencies": {
-    "@babel/cli": "^7.0.0-beta.40",
-    "@babel/core": "^7.0.0-beta.40",
-    "@babel/node": "^7.0.0-beta.40",
-    "@babel/plugin-proposal-pipeline-operator": "^7.0.0-beta.40",
-    "@babel/preset-env": "^7.0.0-beta.40",
-    "@types/jest": "^22.2.0",
-    "@types/node": "^9.4.6",
-    "babel-plugin-macros": "^2.2.0",
-    "chalk": "^2.3.2",
-    "eslint": "^4.18.2",
+    "@babel/cli": "^7.0.0-beta.49",
+    "@babel/core": "^7.0.0-beta.49",
+    "@babel/node": "^7.0.0-beta.49",
+    "@babel/plugin-proposal-pipeline-operator": "^7.0.0-beta.49",
+    "@babel/preset-env": "^7.0.0-beta.49",
+    "@types/jest": "^22.2.3",
+    "@types/node": "^9.6.18",
+    "babel-plugin-macros": "^2.2.1",
+    "chalk": "^2.4.1",
+    "eslint": "^4.19.1",
     "husky": "^0.14.3",
-    "jest": "^22.4.2",
+    "jest": "^22.4.4",
     "param.macro": "^2.0.0",
-    "prettier": "^1.11.1",
-    "pretty-quick": "^1.4.1",
+    "prettier": "^1.13.0",
+    "pretty-quick": "^1.6.0",
     "trash": "^4.3.0",
     "trash-cli": "^1.4.0"
   },
@@ -41,10 +43,13 @@
     "coverageDirectory": "./coverage/",
     "collectCoverage": true,
     "testRegex": "(/__tests__/.*|\\.(test|spec))\\.js$",
-    "moduleFileExtensions": ["js", "json"]
+    "moduleFileExtensions": [
+      "js",
+      "json"
+    ]
   },
   "dependencies": {
-    "npm-run-all": "^4.1.2",
+    "npm-run-all": "^4.1.3",
     "rimraf": "^2.6.2"
   }
 }
